--- a/styles/main.css
+++ b/styles/main.css
@@ -1,18 +1,17 @@
 body {
   margin: 0; }
 
-/* img {
+img {
   width: 100%;
-  margin-bottom: -4px;
-}
+  margin-bottom: -4px; }
+
 #grid[data-columns]::before {
-  content: '3 .column.size-1of3';
-}
+  content: '3 .column.size-1of3'; }
+
 .column {
-  float: left;
-}
+  float: left; }
+
 .size-1of3 {
-  width: 33.33%;
-} */
+  width: 33.33%; }
 
 /*# sourceMappingURL=main.css.map */
