--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,7 +1,7 @@
 body {
   margin: 0;
 }
-/* img {
+img {
   width: 100%;
   margin-bottom: -4px;
 }
@@ -13,4 +13,4 @@ body {
 }
 .size-1of3 {
   width: 33.33%;
-} */
+}
