--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,9 +1,25 @@
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
 body {
   margin: 0;
+  font-family: 'PT Mono';
+  background-color: #499F68;
 }
 img {
   width: 100%;
+  padding: 10px;
   margin-bottom: -4px;
+  border-radius: 15px;
 }
 #grid[data-columns]::before {
   content: '2 .column.size-1of2';
@@ -13,4 +29,25 @@ img {
 }
 .size-1of2 {
   width: 50%;
+}
+
+form {
+  text-align: center;
+}
+
+input {
+  padding: 10px;
+  border: solid 1px #dcdcdc;
+  transition: box-shadow 0.3s, border 0.3s;
+  margin: 0;
+  font-family: sans-serif;
+  font-size: 18px;
+  appearance: none;
+  box-shadow: none;
+  border-radius: none;
+}
+input:focus {
+  border: solid 1px #707070;
+  box-shadow: 0 0 5px 1px #969696;
+  outline: none;
 }
